# grocery_bagger_9000

./: .gitignore  Cargo.toml  README.md  grocery_bagger_9000.js  index.html  lint.sh  rust-toolchain
.github/workflows/: cid.yml
src/: animations.rs  bag_replacement.rs  bags.rs  colors.rs  conveyor_belt.rs  conveyor_belt_movement.rs  debug.rs  dpi.rs  events.rs  gb9000.rs  level1.rs  level2.rs  level3.rs  level4.rs  level5.rs  levels.rs  main.rs  markers.rs  nomino_consts.rs  nominos.rs  piece_movement.rs  run_criteria.rs  scoring.rs  window_management.rs  window_utils.rs
src/analytics/: desktop.rs  mod.rs  web.rs
src/bags/: bag_replacement.rs  bag_size.rs  consts.rs  mod.rs  positioning.rs  spawn.rs
src/conveyor_belt/: consts.rs  data.rs  mod.rs  movement.rs  positioning.rs  spawn.rs
src/levels/: infinite_level.rs  init.rs  level01.rs  level07.rs  level1.rs  level10.rs  level11.rs  level12.rs  level13.rs  level14.rs  level15.rs  level16.rs  level17.rs  level18.rs  level19.rs  level2.rs  level20.rs  level21.rs  level22.rs  level3.rs  level4.rs  level5.rs  level6.rs  level7.rs  level8.rs  level9.rs  mod.rs  scoring.rs  transitions.rs  tutorials.rs
src/levels/init/: level01.rs  level02.rs  level03.rs  level04.rs  level05.rs  level06.rs  level07.rs  level08.rs  level09.rs  level10.rs  level11.rs  level12.rs  level13.rs  level14.rs  level15.rs  level16.rs  level17.rs  level18.rs  level19.rs  level20.rs  level21.rs  level22.rs  level23.rs  mod.rs
src/nominos/: colors.rs  consts.rs  mod.rs  movement.rs  spawn.rs
src/robot/: mod.rs  spawn.rs  timing.rs
src/ui/: consts.rs  display_score.rs  hud.rs  in_game_menu.rs  juice.rs  level_end_menu.rs  mod.rs
tools/level_generation/: Cargo.toml  README.md  bag_filler.py  level_generator.py  nominoes.py
tools/level_generation/src/: bag_fillings.rs  main.rs
tools/level_generation/testdata/bag_fillings/: 3x3  3x5  3x6  4x3  4x4  4x5  4x6  5x3  5x4  5x5  5x6  6x3  6x4  6x5  6x6
web/: index.html  logging.js
