[package]
name = "grocery_bagger_9000"
version = "0.1.0"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
description = "TODO"
repository = "https://github.com/SUPERCILEX/grocery_bagger_9000"
keywords = ["bevy", "tetris", "puzzle"]
categories = ["games"]

[dependencies]
bevy = { version = "0.7.0", default-features = false }
bevy_egui = { version = "0.14.0", default-features = false }
bevy_mod_debugdump = { version = "0.4.0", optional = true }
bevy_prototype_lyon = "0.5.0"
bevy_rapier3d = { version = "0.13.2", default-features = false, features = ["dim3", "simd-nightly"] }
bevy_screen_diags = { git = "https://github.com/SUPERCILEX/bevy_screen_diags", optional = true }
log = { version = "0.4.17", features = ["release_max_level_off"] }
smallvec = "1.8.0"
tracing = { version = "0.1.34", features = ["release_max_level_off"] }

[features]
debug = ["dep:bevy_screen_diags"]
dump = ["dep:bevy_mod_debugdump"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.7.0", default-features = false, features = ["bevy_render", "bevy_winit", "x11"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.7.0", default-features = false, features = ["bevy_render"] }
bevy-web-resizer = "2.0.0"
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
