[package]
name = "grocery_bagger_9000"
version = "0.1.1"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
description = "A Tetris-like game with a twist"
repository = "https://github.com/SUPERCILEX/grocery_bagger_9000"
keywords = ["bevy", "tetris", "puzzle"]
categories = ["games"]
license = "GPL-3.0"

[patch.crates-io]
bevy = { git = "https://github.com/SUPERCILEX/bevy" }
bevy_ecs = { git = "https://github.com/SUPERCILEX/bevy" }
bevy_app = { git = "https://github.com/SUPERCILEX/bevy" }
bevy_render = { git = "https://github.com/SUPERCILEX/bevy" }
bevy_tweening = { git = "https://github.com/SUPERCILEX/bevy_tweening" }
bevy_screen_diags = { git = "https://github.com/SUPERCILEX/bevy_screen_diags" }

[dependencies]
bevy = { version = "0.7.0", default-features = false }
bevy-inspector-egui = { version = "0.11.0", optional = true }
bevy-inspector-egui-rapier = { version = "0.3.0", features = ["rapier3d"], optional = true }
bevy_egui = { version = "0.14.0", default-features = false, optional = true }
bevy_mod_debugdump = { version = "0.4.0", optional = true }
bevy_prototype_lyon = "0.5.0"
bevy_rapier3d = { version = "0.13.2", default-features = false, features = ["dim3", "simd-nightly"] }
bevy_screen_diags = { version = "0.4.0", optional = true }
bevy_svg = { version = "0.7.0", default-features = false, features = ["2d"] }
bevy_tweening = { version = "0.4.0", default-features = false, features = ["bevy_ui"] }
bitflags = "1.3.2"
log = { version = "0.4.17", features = ["release_max_level_off"] }
rand = "0.8.5"
smallvec = "1.8.0"
tracing = { version = "0.1.34", features = ["release_max_level_off"] }

[features]
debug = ["dep:bevy_egui", "dep:bevy_screen_diags", "dep:bevy-inspector-egui", "dep:bevy-inspector-egui-rapier"]
dump = ["dep:bevy_mod_debugdump"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.7.0", default-features = false, features = ["bevy_render", "bevy_ui", "bevy_text", "bevy_winit", "x11"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.7.0", default-features = false, features = ["bevy_render", "bevy_ui", "bevy_text"] }
bevy-web-resizer = "2.0.0"
wasm-bindgen = "0.2.80"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
