[package]
name = "gb9000_level_generation"
version = "0.1.0"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2021"
description = "Grocery Bagger 9000 level generator"
repository = "https://github.com/SUPERCILEX/grocery_bagger_9000"
keywords = ["tetris", "solver"]
categories = ["development-tools"]
license = "GPL-3.0"

[dependencies]
ahash = "0.7.6"
serde = { version = "1.0.138", features = ["derive"] }

[dev-dependencies]
goldenfile = "1.4.3"
rstest = "0.15.0"
serde_json = "1.0.82"
