[package]
name = "gb9000_level_generation"
version = "0.1.0"
description = "Grocery Bagger 9000 level generator"
keywords = ["tetris", "solver"]
categories = ["development-tools"]

[dependencies]
ahash = "0.7.6"
serde = { version = "1.0.138", features = ["derive"] }

[dev-dependencies]
goldenfile = "1.4.3"
rstest = "0.15.0"
serde_json = "1.0.82"
